# pydecorate

./: .bandit  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  MANIFEST.in  ProjectHome.md  README.md  README.rst  RELEASING.md  appveyor.yml  cairotests.py  pyproject.toml  setup.cfg  setup.py  test.py  test_cairo.py  test_old.py
.github/workflows/: ci.yaml  deploy-sdist.yaml
continuous_integration/: environment.yaml
doc/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
doc/source/api/: pydecorate.fonts.rst  pydecorate.rst
pydecorate/: Decorator.py  DecoratorAGG.py  DecoratorBase.py  DecoratorCairo.py  __init__.py  decorator.py  decorator_agg.py  decorator_base.py  version.py
pydecorate/tests/: test_decorator_agg.py  test_legacy.py
pydecorate_old/: __init__.py
pydecorate_old/colormap/: __init__.py
